include/codata_constants_2018.h

ADD_IMPORT extern const double ELECTRON_MUON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MUON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_NEUTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_NEUTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_NEUTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_NEUTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_TAU_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TAU_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_TRITON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TRITON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_VOLT_2018;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT_2018;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double ELECTRON_VOLT_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double ELEMENTARY_CHARGE_2018;/**< C */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE_2018;/**< C */
ADD_IMPORT extern const double ELEMENTARY_CHARGE_OVER_H_BAR_2018;/**< A J^-1 */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE_OVER_H_BAR_2018;/**< A J^-1 */
ADD_IMPORT extern const double FARADAY_CONSTANT_2018;/**< C mol^-1 */
ADD_IMPORT extern const double U_FARADAY_CONSTANT_2018;/**< C mol^-1 */
ADD_IMPORT extern const double FERMI_COUPLING_CONSTANT_2018;/**< GeV^-2 */
ADD_IMPORT extern const double U_FERMI_COUPLING_CONSTANT_2018;/**< GeV^-2 */
ADD_IMPORT extern const double FINE_STRUCTURE_CONSTANT_2018;/**<  */
ADD_IMPORT extern const double U_FINE_STRUCTURE_CONSTANT_2018;/**<  */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT_2018;/**< W m^2 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT_2018;/**< W m^2 */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018;/**< W m^2 sr^-1 */