src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="ELECTRON_MUON_MASS_RATIO_2018"):: &
capi_101_2018=ELECTRON_MUON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MUON_MASS_RATIO_2018") :: &
capi_U_101_2018=U_ELECTRON_MUON_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_NEUTRON_MAG__MOM__RATIO_2018=960.92050d0 !! 
real(real64), parameter, public :: U_ELECTRON_NEUTRON_MAG__MOM__RATIO_2018=0.00023d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_NEUTRON_MAG__MOM__RATIO_2018"):: &
capi_102_2018=ELECTRON_NEUTRON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_NEUTRON_MAG__MOM__RATIO_2018") :: &
capi_U_102_2018=U_ELECTRON_NEUTRON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_NEUTRON_MASS_RATIO_2018=5.4386734424d-4 !! 
real(real64), parameter, public :: U_ELECTRON_NEUTRON_MASS_RATIO_2018=0.0000000026d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_NEUTRON_MASS_RATIO_2018"):: &
capi_103_2018=ELECTRON_NEUTRON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_NEUTRON_MASS_RATIO_2018") :: &
capi_U_103_2018=U_ELECTRON_NEUTRON_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_PROTON_MAG__MOM__RATIO_2018=-658.21068789d0 !! 
real(real64), parameter, public :: U_ELECTRON_PROTON_MAG__MOM__RATIO_2018=0.00000020d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_PROTON_MAG__MOM__RATIO_2018"):: &
capi_104_2018=ELECTRON_PROTON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_PROTON_MAG__MOM__RATIO_2018") :: &
capi_U_104_2018=U_ELECTRON_PROTON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_PROTON_MASS_RATIO_2018=5.44617021487d-4 !! 
real(real64), parameter, public :: U_ELECTRON_PROTON_MASS_RATIO_2018=0.00000000033d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_PROTON_MASS_RATIO_2018"):: &
capi_105_2018=ELECTRON_PROTON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_PROTON_MASS_RATIO_2018") :: &
capi_U_105_2018=U_ELECTRON_PROTON_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_RELATIVE_ATOMIC_MASS_2018=5.48579909065d-4 !! 
real(real64), parameter, public :: U_ELECTRON_RELATIVE_ATOMIC_MASS_2018=0.00000000016d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_RELATIVE_ATOMIC_MASS_2018"):: &
capi_106_2018=ELECTRON_RELATIVE_ATOMIC_MASS_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_RELATIVE_ATOMIC_MASS_2018") :: &
capi_U_106_2018=U_ELECTRON_RELATIVE_ATOMIC_MASS_2018

real(real64), parameter, public :: ELECTRON_TAU_MASS_RATIO_2018=2.87585d-4 !! 
real(real64), parameter, public :: U_ELECTRON_TAU_MASS_RATIO_2018=0.00019d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_TAU_MASS_RATIO_2018"):: &
capi_107_2018=ELECTRON_TAU_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_TAU_MASS_RATIO_2018") :: &
capi_U_107_2018=U_ELECTRON_TAU_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018=1.370933554787d-4 !! 
real(real64), parameter, public :: U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018=0.000000000045d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018"):: &
capi_108_2018=ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018") :: &
capi_U_108_2018=U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018=864.058257d0 !! 
real(real64), parameter, public :: U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018=0.000010d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018"):: &
capi_109_2018=ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018") :: &
capi_U_109_2018=U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018=-658.2275971d0 !! 
real(real64), parameter, public :: U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018=0.0000072d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018"):: &
capi_110_2018=ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018") :: &
capi_U_110_2018=U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_TRITON_MASS_RATIO_2018=1.819200062251d-4 !! 
real(real64), parameter, public :: U_ELECTRON_TRITON_MASS_RATIO_2018=0.000000000090d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_TRITON_MASS_RATIO_2018"):: &
capi_111_2018=ELECTRON_TRITON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_TRITON_MASS_RATIO_2018") :: &
capi_U_111_2018=U_ELECTRON_TRITON_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_VOLT_2018=1.602176634d-19 !! J
real(real64), parameter, public :: U_ELECTRON_VOLT_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_2018"):: &
capi_112_2018=ELECTRON_VOLT_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_2018") :: &
capi_U_112_2018=U_ELECTRON_VOLT_2018

real(real64), parameter, public :: ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=1.07354410233d-9 !! u
real(real64), parameter, public :: U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.00000000032d-9 !! u

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_113_2018=ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_113_2018=U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018=3.6749322175655d-2 !! E_h
real(real64), parameter, public :: U_ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018=0.0000000000071d-2 !! E_h

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018"):: &
capi_114_2018=ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018") :: &
capi_U_114_2018=U_ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018=2.417989242d14 !! Hz
real(real64), parameter, public :: U_ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018=0.0d0 !! Hz

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018"):: &
capi_115_2018=ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018") :: &
capi_U_115_2018=U_ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018=8.065543937d5 !! m^-1
real(real64), parameter, public :: U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018=0.0d0 !! m^-1

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_116_2018=ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_116_2018=U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_JOULE_RELATIONSHIP_2018=1.602176634d-19 !! J
real(real64), parameter, public :: U_ELECTRON_VOLT_JOULE_RELATIONSHIP_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_JOULE_RELATIONSHIP_2018"):: &
capi_117_2018=ELECTRON_VOLT_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_JOULE_RELATIONSHIP_2018") :: &
capi_U_117_2018=U_ELECTRON_VOLT_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018=1.160451812d4 !! K
real(real64), parameter, public :: U_ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018=0.0d0 !! K

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018"):: &
capi_118_2018=ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018") :: &
capi_U_118_2018=U_ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018=1.782661921d-36 !! kg
real(real64), parameter, public :: U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018=0.0d0 !! kg

real(c_double), protected, public, bind(C,name="ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018"):: &
capi_119_2018=ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_119_2018=U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: ELEMENTARY_CHARGE_2018=1.602176634d-19 !! C
real(real64), parameter, public :: U_ELEMENTARY_CHARGE_2018=0.0d0 !! C

real(c_double), protected, public, bind(C,name="ELEMENTARY_CHARGE_2018"):: &
capi_120_2018=ELEMENTARY_CHARGE_2018
real(c_double), protected, public, bind(C,name="U_ELEMENTARY_CHARGE_2018") :: &
capi_U_120_2018=U_ELEMENTARY_CHARGE_2018

real(real64), parameter, public :: ELEMENTARY_CHARGE_OVER_H_BAR_2018=1.519267447d15 !! A J^-1
real(real64), parameter, public :: U_ELEMENTARY_CHARGE_OVER_H_BAR_2018=0.0d0 !! A J^-1

real(c_double), protected, public, bind(C,name="ELEMENTARY_CHARGE_OVER_H_BAR_2018"):: &
capi_121_2018=ELEMENTARY_CHARGE_OVER_H_BAR_2018
real(c_double), protected, public, bind(C,name="U_ELEMENTARY_CHARGE_OVER_H_BAR_2018") :: &
capi_U_121_2018=U_ELEMENTARY_CHARGE_OVER_H_BAR_2018

real(real64), parameter, public :: FARADAY_CONSTANT_2018=96485.33212d0 !! C mol^-1
real(real64), parameter, public :: U_FARADAY_CONSTANT_2018=0.0d0 !! C mol^-1

real(c_double), protected, public, bind(C,name="FARADAY_CONSTANT_2018"):: &
capi_122_2018=FARADAY_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_FARADAY_CONSTANT_2018") :: &
capi_U_122_2018=U_FARADAY_CONSTANT_2018

real(real64), parameter, public :: FERMI_COUPLING_CONSTANT_2018=1.1663787d-5 !! GeV^-2
real(real64), parameter, public :: U_FERMI_COUPLING_CONSTANT_2018=0.0000006d-5 !! GeV^-2

real(c_double), protected, public, bind(C,name="FERMI_COUPLING_CONSTANT_2018"):: &
capi_123_2018=FERMI_COUPLING_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_FERMI_COUPLING_CONSTANT_2018") :: &
capi_U_123_2018=U_FERMI_COUPLING_CONSTANT_2018

real(real64), parameter, public :: FINE_STRUCTURE_CONSTANT_2018=7.2973525693d-3 !! 
real(real64), parameter, public :: U_FINE_STRUCTURE_CONSTANT_2018=0.0000000011d-3 !! 

real(c_double), protected, public, bind(C,name="FINE_STRUCTURE_CONSTANT_2018"):: &
capi_124_2018=FINE_STRUCTURE_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_FINE_STRUCTURE_CONSTANT_2018") :: &
capi_U_124_2018=U_FINE_STRUCTURE_CONSTANT_2018

real(real64), parameter, public :: FIRST_RADIATION_CONSTANT_2018=3.741771852d-16 !! W m^2
real(real64), parameter, public :: U_FIRST_RADIATION_CONSTANT_2018=0.0d0 !! W m^2

real(c_double), protected, public, bind(C,name="FIRST_RADIATION_CONSTANT_2018"):: &
capi_125_2018=FIRST_RADIATION_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_FIRST_RADIATION_CONSTANT_2018") :: &
capi_U_125_2018=U_FIRST_RADIATION_CONSTANT_2018

real(real64), parameter, public :: FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018=1.191042972d-16 !! W m^2 sr^-1
real(real64), parameter, public :: U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018=0.0d0 !! W m^2 sr^-1
